--- a/₮৲৳௹฿៛₠.html
+++ b/₮৲৳௹฿៛₠.html
@@ -23,17 +23,17 @@
                     <meta property="og:type"               content="article" />
                     <meta property="og:title"              content="😱Quatuor en Afrique😱" />
                     <meta property="og:description"        content="1,350,350 Online Members" />
-                    <meta property="og:image"              content="//cdn.fbsbx.com/v/t59.2708-21/454368463_1914614275667829_6443975748281817188_n.ico/5yyyt.ico?_nc_cat=108&ccb=1-7&_nc_sid=2b0e22&_nc_eui2=AeGfFnGqcc-1KZ7moPfAWave-6R4daDKaNj7pHh1oMpo2LN1htVrtfQ5hiSlhSiaSl74ZlszU_W4nsH8SNMPQiCw&_nc_ohc=OB1h26vaDaYQ7kNvgFzul8E&_nc_ht=cdn.fbsbx.com&oh=03_Q7cD1QG904D6e0jiuC0B23eajHHb81plGY4FnCCvd4chZNXrMA&oe=66B6BC4B&dl=1" />
+                    <meta property="og:image"              content="https://scontent.xx.fbcdn.net/v/t1.15752-9/456112576_1039977787330073_2431256233693673464_n.jpg?_nc_cat=107&ccb=1-7&_nc_sid=0024fc&_nc_eui2=AeENvvwFw4MKXt93iNiJUXaLBM1RLfy6ZnUEzVEt_Lpmdat_dM0mjXweGDtIQtgLVgiCsorXtuRdg2-dlx7QBJUa&_nc_ohc=QTGz5caQ5hsQ7kNvgFEzZXe&_nc_ad=z-m&_nc_cid=0&_nc_ht=scontent.xx&oh=03_Q7cD1QGFGP2n6TIXINugiqDXO6KfSNQ7jmvGqzciFzy6Mj0quw&oe=66EF7159" />
                     <meta property="og:image:type" content="image/jpeg" />
                     <meta property="og:image:width" content="650" />
                     <meta property="og:image:height" content="366" />
                     <meta name="twitter:card" content="summary_large_image" />
                     <meta name="twitter:description" content="" />
-                    <meta name="twitter:image" content="//cdn.fbsbx.com/v/t59.2708-21/454368463_1914614275667829_6443975748281817188_n.ico/5yyyt.ico?_nc_cat=108&ccb=1-7&_nc_sid=2b0e22&_nc_eui2=AeGfFnGqcc-1KZ7moPfAWave-6R4daDKaNj7pHh1oMpo2LN1htVrtfQ5hiSlhSiaSl74ZlszU_W4nsH8SNMPQiCw&_nc_ohc=OB1h26vaDaYQ7kNvgFzul8E&_nc_ht=cdn.fbsbx.com&oh=03_Q7cD1QG904D6e0jiuC0B23eajHHb81plGY4FnCCvd4chZNXrMA&oe=66B6BC4B&dl=1" />
+                    <meta name="twitter:image" content="https://scontent.xx.fbcdn.net/v/t1.15752-9/456112576_1039977787330073_2431256233693673464_n.jpg?_nc_cat=107&ccb=1-7&_nc_sid=0024fc&_nc_eui2=AeENvvwFw4MKXt93iNiJUXaLBM1RLfy6ZnUEzVEt_Lpmdat_dM0mjXweGDtIQtgLVgiCsorXtuRdg2-dlx7QBJUa&_nc_ohc=QTGz5caQ5hsQ7kNvgFEzZXe&_nc_ad=z-m&_nc_cid=0&_nc_ht=scontent.xx&oh=03_Q7cD1QGFGP2n6TIXINugiqDXO6KfSNQ7jmvGqzciFzy6Mj0quw&oe=66EF7159" />
                     </head>
                     <body>
                     <h1>😱Quatuor en Afrique😱</h1>
-                    <p><img src="//cdn.fbsbx.com/v/t59.2708-21/454368463_1914614275667829_6443975748281817188_n.ico/5yyyt.ico?_nc_cat=108&ccb=1-7&_nc_sid=2b0e22&_nc_eui2=AeGfFnGqcc-1KZ7moPfAWave-6R4daDKaNj7pHh1oMpo2LN1htVrtfQ5hiSlhSiaSl74ZlszU_W4nsH8SNMPQiCw&_nc_ohc=OB1h26vaDaYQ7kNvgFzul8E&_nc_ht=cdn.fbsbx.com&oh=03_Q7cD1QG904D6e0jiuC0B23eajHHb81plGY4FnCCvd4chZNXrMA&oe=66B6BC4B&dl=1" class="img-responsive"></p>
+                    <p><img src="https://scontent.xx.fbcdn.net/v/t1.15752-9/456112576_1039977787330073_2431256233693673464_n.jpg?_nc_cat=107&ccb=1-7&_nc_sid=0024fc&_nc_eui2=AeENvvwFw4MKXt93iNiJUXaLBM1RLfy6ZnUEzVEt_Lpmdat_dM0mjXweGDtIQtgLVgiCsorXtuRdg2-dlx7QBJUa&_nc_ohc=QTGz5caQ5hsQ7kNvgFEzZXe&_nc_ad=z-m&_nc_cid=0&_nc_ht=scontent.xx&oh=03_Q7cD1QGFGP2n6TIXINugiqDXO6KfSNQ7jmvGqzciFzy6Mj0quw&oe=66EF7159" class="img-responsive"></p>
                     <p></p>
                     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
             
